created a maps folder

--- a/Examples/RGB-D/realsense.yaml
+++ b/Examples/RGB-D/realsense.yaml
@@ -71,4 +71,4 @@ Viewer.ViewpointF: 500
 #--------------------------------------------------------------------------------------------
 # Map Parameters
 #--------------------------------------------------------------------------------------------
-Map.mapfile: videomap.bin
+Map.mapfile: maps/rovermap.bin
