--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ Examples/ROS/ORB_SLAM2/build/
 Examples/Stereo/stereo_euroc
 Examples/Stereo/stereo_kitti
 KeyFrameTrajectory.txt
-maps/
+maps/rovermap.bin
 Thirdparty/DBoW2/build/
 Thirdparty/DBoW2/lib/
 Thirdparty/g2o/build/
