--- a/Examples/RGB-D/realsense.yaml
+++ b/Examples/RGB-D/realsense.yaml
@@ -57,6 +57,7 @@ ORBextractor.minThFAST: 25
 #--------------------------------------------------------------------------------------------
 # Viewer Parameters
 #--------------------------------------------------------------------------------------------
+Viewer.UseViewer: 0
 Viewer.KeyFrameSize: 0.05
 Viewer.KeyFrameLineWidth: 1
 Viewer.GraphLineWidth: 0.9
@@ -71,4 +72,4 @@ Viewer.ViewpointF: 500
 #--------------------------------------------------------------------------------------------
 # Map Parameters
 #--------------------------------------------------------------------------------------------
-Map.mapfile: maps/rovermap.bin
+Map.mapfile: /home/mma2739/ORB_SLAM2/maps/rovermap.bin
