--- a/Examples/Stereo/EuRoC.yaml
+++ b/Examples/Stereo/EuRoC.yaml
@@ -103,6 +103,7 @@ ORBextractor.minThFAST: 7
 #--------------------------------------------------------------------------------------------
 # Viewer Parameters
 #--------------------------------------------------------------------------------------------
+Viewer.UseViewer: 1
 Viewer.KeyFrameSize: 0.05
 Viewer.KeyFrameLineWidth: 1
 Viewer.GraphLineWidth: 0.9
