--- a/Examples/Stereo/KITTI03.yaml
+++ b/Examples/Stereo/KITTI03.yaml
@@ -53,6 +53,7 @@ ORBextractor.minThFAST: 7
 #--------------------------------------------------------------------------------------------
 # Viewer Parameters
 #--------------------------------------------------------------------------------------------
+Viewer.UseViewer: 1
 Viewer.KeyFrameSize: 0.6
 Viewer.KeyFrameLineWidth: 2
 Viewer.GraphLineWidth: 1
