publish center of mass pose

--- a/Examples/RGB-D/r200.yaml
+++ b/Examples/RGB-D/r200.yaml
@@ -34,6 +34,14 @@ ThDepth: 30.0
 # Deptmap values factor 
 DepthMapFactor: 1.0
 
+# Center of mass of the vehicle w.r.t. the camera
+# This is used when publishing the position of
+# the vehicle's center of mass, which is just translated
+# w.r.t. the camera
+COM.x: -0.12
+COM.y:  0.0
+COM.z:  0.03
+
 #--------------------------------------------------------------------------------------------
 # ORB Parameters
 #--------------------------------------------------------------------------------------------
@@ -72,5 +80,5 @@ Viewer.ViewpointF: 500
 #--------------------------------------------------------------------------------------------
 # Map Parameters
 #--------------------------------------------------------------------------------------------
-Map.mapfile: /home/aero/ORB_SLAM2/maps/rovermap_demo2.bin
+Map.mapfile: /home/aero/ORB_SLAM2/maps/rovermap_r200.bin
 
