--- a/Examples/RGB-D/realsense.yaml
+++ b/Examples/RGB-D/realsense.yaml
@@ -34,6 +34,14 @@ ThDepth: 30.0
 # Deptmap values factor 
 DepthMapFactor: 1000.0
 
+# Center of mass of the vehicle w.r.t. the camera
+# This is used when publishing the position of
+# the vehicle's center of mass, which is just translated
+# w.r.t. the camera
+COM.x:  0.0
+COM.y:  0.0
+COM.z:  0.0
+
 #--------------------------------------------------------------------------------------------
 # ORB Parameters
 #--------------------------------------------------------------------------------------------
